--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                           保障：律师出具租赁协议；车管所备案，车辆财产和事故责任划分；租赁期间，双方配合办理各种车辆业务
                       </p>
                   </li>
-              
+              <li style="clear: both;width: 100%;height: 0;"></li>
                   <li class="s3 fl">
                       <i></i>
                       <h3>京牌过户（转让）</h3>
