--- a/news_m_article.html
+++ b/news_m_article.html
@@ -153,7 +153,7 @@
 
                 <dl class="clearfix">
                     <dt>本文地址：</dt>
-                    <dd class="article_high_color huanhang">http://m.chepaitong.com/XXX.html</dd>
+                    <dd class="article_high_color huanhang">http://m.chepaitong.com/sdsadasdasdasdasdsaXXX.html</dd>
                 </dl>
                 <dl class="clearfix">
                     <dt>关注我们：</dt>
